# RAG

./: README.md
RAG_Local_calls/: README.md  main.py  output.txt  pyproject.toml
RAG_Local_calls/SimpleRAG/: Houses.json  LLM_utils.py  Prompt_content.py  SimpleRAG.py  pyproject.toml
RAG_Local_calls/Vector_embeddings_mod2/: CalculateDistance.py  CreateEmbedding.py  CreateVectorDB.py  CreateWeviate.py  Embedding.py  FetchEmbedData.py  MeasureRetrieval.py  README.md  SimpleRAG.py  VectorDistanceUtils.py  check_weaviate.py  docker-compose.yml  testweaviate.py
